# nook

./: .dockerignore  Cargo.toml  README.md  SECURITY.md  TECH-IMPLEMENTATION-GUIDE.md  publish-tag-release.sh
.github/workflows/: ci.yml  release.yml
crates/nook/: Cargo.toml
crates/nook-core/: Cargo.toml
crates/nook-core/src/: auth.rs  crypto.rs  lib.rs  object.rs
crates/nook-core/tests/: object_integrity.rs
crates/nook-vault/: Cargo.toml  Dockerfile
crates/nook-vault/src/: auth.rs  crypto.rs  lib.rs  manifest.rs  object.rs
crates/nook-vault/tests/: deletion_and_listing.rs  gc_and_rm.rs  namespace_sharing.rs  object_integrity.rs  push_safety.rs  quota_and_timestamps.rs  vault_key_storage.rs
crates/nook-vault/tests/support/: mod.rs
crates/nook/src/: main.rs
crates/nook/tests/: gc_and_rm.rs  namespace_sharing.rs  push_safety.rs  vault_key_storage.rs
crates/nook/tests/support/: mod.rs
crates/nookd/: Cargo.toml  Dockerfile
crates/nookd/src/: main.rs
crates/nookd/tests/: deletion_and_listing.rs  quota_and_timestamps.rs
images/: nook-logo-small.xcf  nook-logo.xcf
openspec/changes/archive/2026-07-04-spec-003-implementation-fixes/: tasks.md
openspec/changes/archive/2026-07-04-spec-003-implementation-fixes/specs/repo-structure-ci/: spec.md
openspec/changes/archive/2026-07-04-spec-003-implementation-fixes/specs/server-containerization/: spec.md
openspec/changes/archive/2026-07-04-spec-004-multi-vault-access-control/: tasks.md
openspec/changes/archive/2026-07-04-spec-004-multi-vault-access-control/specs/multi-tenant-concurrency/: spec.md
openspec/changes/archive/2026-07-04-spec-004-multi-vault-access-control/specs/multi-tenant-quota/: spec.md
openspec/changes/archive/2026-07-04-spec-004-multi-vault-access-control/specs/vault-lifecycle/: spec.md
openspec/changes/archive/2026-07-05-remote-deletion-auto-gc/specs/manifest-push-safety/: spec.md
openspec/changes/archive/2026-07-05-remote-deletion-auto-gc/specs/multi-tenant-object-routing/: spec.md
openspec/changes/archive/2026-07-05-remote-deletion-auto-gc/specs/vault-request-authentication/: spec.md
openspec/changes/crates-io-publishing/: design.md  proposal.md  tasks.md
openspec/changes/crates-io-publishing/specs/release-packaging/: spec.md
openspec/changes/remote-deletion-auto-gc/: design.md  proposal.md  tasks.md
openspec/changes/remote-deletion-auto-gc/specs/automatic-garbage-collection/: spec.md
openspec/changes/remote-deletion-auto-gc/specs/multi-tenant-quota/: spec.md
openspec/changes/remote-deletion-auto-gc/specs/namespace-file-removal/: spec.md
openspec/changes/remote-deletion-auto-gc/specs/object-deletion-api/: spec.md
openspec/changes/spec-003-implementation-fixes/: design.md  proposal.md  tasks.md
openspec/changes/spec-003-implementation-fixes/specs/client-config-format/: spec.md
openspec/changes/spec-003-implementation-fixes/specs/client-key-storage/: spec.md
openspec/changes/spec-003-implementation-fixes/specs/manifest-push-safety/: spec.md
openspec/changes/spec-003-implementation-fixes/specs/object-wire-format-integrity/: spec.md
openspec/changes/spec-003-implementation-fixes/specs/release-packaging/: spec.md
openspec/changes/spec-003-implementation-fixes/specs/server-metadata-quota/: spec.md
openspec/changes/spec-004-multi-vault-access-control/: design.md  proposal.md  tasks.md
openspec/changes/spec-004-multi-vault-access-control/specs/multi-tenant-object-routing/: spec.md
openspec/changes/spec-004-multi-vault-access-control/specs/namespace-management/: spec.md
openspec/changes/spec-004-multi-vault-access-control/specs/vault-request-authentication/: spec.md
openspec/specs/automatic-garbage-collection/: spec.md
openspec/specs/client-config-format/: spec.md
openspec/specs/client-key-storage/: spec.md
openspec/specs/manifest-push-safety/: spec.md
openspec/specs/multi-tenant-concurrency/: spec.md
openspec/specs/multi-tenant-object-routing/: spec.md
openspec/specs/multi-tenant-quota/: spec.md
openspec/specs/namespace-file-removal/: spec.md
openspec/specs/namespace-management/: spec.md
openspec/specs/object-deletion-api/: spec.md
openspec/specs/object-wire-format-integrity/: spec.md
openspec/specs/release-packaging/: spec.md
openspec/specs/repo-structure-ci/: spec.md
openspec/specs/server-containerization/: spec.md
openspec/specs/server-metadata-quota/: spec.md
openspec/specs/vault-lifecycle/: spec.md
openspec/specs/vault-request-authentication/: spec.md
releases/: RELEASE_NOTES-v0.11.0.md
specs/: SPEC-001-Base Implementation.md  SPEC-002-FileNavigation.md  SPEC-003-implementation-fixes.md  SPEC-004-multi-vault-user-concurrecny-changes.md  SPEC-005-crates.io-publishing.md
