[package]
name = "nook-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
zeroize = "1"
