[package]
name = "nook-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
bincode = "1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
zeroize = "1"
argon2 = "0.5.3"
hmac = "0.12"
