[package]
name = "nook"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
futures = "0.3"
hex = "0.4"
nook-core = { path = "../nook-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2"
keyring = { version = "4.1.3", features = ["apple-native-keyring-store"] }
rpassword = "7.5.4"
toml = "1.1.2"
hmac = "0.12"
sha2 = "0.10"
