[package]
name = "nookd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
hex = "0.4"
hyper = { version = "1", features = ["http1", "http2", "server"] }
nook-core = { path = "../nook-core" }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3"
